@@ -3,6 +3,8 @@
 date Version 3.00.57 (Final)
 * FS#349 - "RC8 menu editor still generate incorect menu item code"
 * FS#345 - "Crash on Mac OS X when loading plugins"
+* Fixed crash on close when showing a propgrid from the wxAdditions plugin
+  in the Designer window.
 
 03/18/2008 Version 3.00.56 (RC8)
 * Added #include <wx/intl.h> to header file when using internationalization.
